# dubious-tracer

./: .clang-format  CMakeLists.txt  README.md  main.cpp
carrier/: custom_writer.cpp  custom_writer.h
dubious/: span.cpp  span.h  span_context.cpp  span_context.h  span_context_serializer.cpp  span_context_serializer.h  span_options.cpp  span_options.h  tracer.cpp  tracer.h
